--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.8.3",
     "antd": "^4.22.4",
     "axios": "^0.27.2",
+    "json-server-auth": "^2.1.0",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,8 +26,11 @@
     "@types/node": "18.6.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
 }
